--- a/Tavisca.Tripster.HotelApi/Tavisca.Tripster.HotelDAL/Tavisca.Tripster.Hotel.Data.csproj
+++ b/Tavisca.Tripster.HotelApi/Tavisca.Tripster.HotelDAL/Tavisca.Tripster.Hotel.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -8,6 +8,10 @@
     <Folder Include="DAL\" />
     <Folder Include="Repository\" />
     <Folder Include="Translator\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.9.2" />
   </ItemGroup>
 
 </Project>
