Connection To Mongodb Done Authentication to both server and client remaining and configuration through JSON file connectionstring.json

--- a/Tavisca.Tripster.HotelApi/Tavisca.Tripster.HotelDAL/Tavisca.Tripster.Hotel.Data.csproj
+++ b/Tavisca.Tripster.HotelApi/Tavisca.Tripster.HotelDAL/Tavisca.Tripster.Hotel.Data.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.9.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.9.2" />
   </ItemGroup>
 
